# peekaboo

./: .gitignore  Cargo.toml  README.markdown  build.rs  tauri.conf.json
.github/workflows/: release.yml  rust.yml
icons/: 512-icns.icns  icon.icns
src/: main.rs
ui/: index.html  main.js
