[package]
name = "peekabo"
version = "0.1.0"
license = "MIT"
edition = "2021"
authors = ["Angel Dollface <youreccentricity@outlook.com>"]
description= "A graphical interface to display images."
homepage = "https://github.com/angeldollface/peekabo"
repository = "https://github.com/angeldollface/peekabo"
documentation = "https://github.com/angeldollface/peekabo"
readme = "README.markdown"
categories = ["images"]
exclude = [
  "/.github"
]

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4", features = [ "api-all"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
